<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/todos_add_nav_graph"
    app:startDestination="@id/step_select">

    <fragment
        android:id="@+id/step_select"
        android:name="com.guerra.enrico.sera.ui.todos.add.steps.SelectFragment"
        android:label="@string/title_select_add" />

    <fragment
        android:id="@+id/step_add_category"
        android:name="com.guerra.enrico.sera.ui.todos.add.steps.AddCategoryFragment"
        android:label="@string/title_add_category" />

    <fragment
        android:id="@+id/step_select_category"
        android:name="com.guerra.enrico.sera.ui.todos.add.steps.SelectCategoryFragment"
        android:label="@string/title_select_category" />

    <fragment
        android:id="@+id/step_add_task"
        android:name="com.guerra.enrico.sera.ui.todos.add.steps.AddTaskFragment"
        android:label="@string/title_add_task" />

    <fragment
        android:id="@+id/step_schedule"
        android:name="com.guerra.enrico.sera.ui.todos.add.steps.ScheduleFragment"
        android:label="@string/title_schedule" />

    <fragment
        android:id="@+id/step_done"
        android:name="com.guerra.enrico.sera.ui.todos.add.steps.DoneFragment"
        android:label="@string/title_done" />

</navigation>