<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/navigation_todos">
    <fragment
        android:id="@+id/navigation_todos"
        android:name="com.guerra.enrico.sera.ui.todos.TodosFragment"
        android:label="@string/title_todos" />
    <fragment
        android:id="@+id/navigation_goals"
        android:name="com.guerra.enrico.sera.ui.goals.GoalsFragment"
        android:label="@string/title_goals" />
    <fragment
        android:id="@+id/navigation_results"
        android:name="com.guerra.enrico.sera.ui.results.ResultsFragment"
        android:label="@string/title_results" />

    <include app:graph="@navigation/todo_add_nav_graph" />
</navigation>